// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el <GifGrid /> debe mostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3>
    Dragon Ball
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en el <GifGrid /> debe mostrarse correctamente 1`] = `
<Fragment>
  <h3>
    Dragon Ball
  </h3>
  <p>
    Loading... 💨
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
